WebCore/platform/graphics/Path.h
@@ -124,6 +124,7 @@ namespace WebCore {
         // Gets the current point of the current path, which is conceptually the final point reached by the path so far.
         // Note the Path can be empty (isEmpty() == true) and still have a current point.
         bool hasCurrentPoint() const;
+        FloatPoint currentPoint() const;
 
         void moveTo(const FloatPoint&);
         void addLineTo(const FloatPoint&);
